# google-api-cpp-client

./: .gitignore
service_apis/gmail/google/gmail_api/: CMakeLists.txt  auto_forwarding.cc  auto_forwarding.h  batch_delete_messages_request.cc  batch_delete_messages_request.h  batch_modify_messages_request.cc  batch_modify_messages_request.h  draft.cc  draft.h  filter.cc  filter.h  filter_action.cc  filter_action.h  filter_criteria.cc  filter_criteria.h  forwarding_address.cc  forwarding_address.h  gmail_api.h  gmail_service.cc  gmail_service.h  history.cc  history.h  history_label_added.cc  history_label_added.h  history_label_removed.cc  history_label_removed.h  history_message_added.cc  history_message_added.h  history_message_deleted.cc  history_message_deleted.h  imap_settings.cc  imap_settings.h  label.cc  label.h  label_color.cc  label_color.h  list_drafts_response.cc  list_drafts_response.h  list_filters_response.cc  list_filters_response.h  (+44 more)
src/samples/: CMakeLists.txt
src/samples/gmail_inbox/: CMakeLists.txt  README.md  authorization.cc  authorization.h  command.cc  command.h  encription.cc  encription.h  http_status.cc  http_status.h  inbox.cc  inbox.h  main.cc  new_http_transport_layer_config.cc  new_http_transport_layer_config.h  storage.cc  storage.h  test_encription.cc  test_storage.cc
